# EU_LOBBYING_INFLUENCE

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  embeddings_exploration.ipynb  explorative_analysis.ipynb  pyproject.toml  rq2_restructured.ipynb  schema.sql
analysis/: aia_candidates.csv  chunk_hys_feedback.py  digitaleurope_pdf_text.json  gold_procedure.csv  influence_report_2021_0106_COD.json  influence_report_2021_0214_COD.json  influence_report_2023_0212_COD.json  influence_report_2023_0435_COD.json  influence_report_2025_0360_COD.json  mep_name_fix_report.csv  org_dedup_report.csv  org_dedup_report_bulk.csv  procedure_aliases_generated.json  procedures_to_alias.json  run_amendment_pipeline.py  run_preproposal_pipeline.py
embedding testing/: Preproposal_influence_test.ipynb  retrieval_test.ipynb
embeddings/: validis.npy  validis_records.csv
evaluation/: ground_truth_combined.csv  prompt_eval.py  transformertest.ipynb  transformertest_forward.ipynb
images/: gini_coefficients.csv
legislation_embeddings/: legislation_chunks.json  legislation_embeddings.npy
pipeline/: definitions.py
scripts/: 01_lobbying_org_method_stats.py  05_timeline_bars.py  06_eda_figures.py  07_rq2_restructured.ipynb  apply_org_dedup.py  gold_ablation.py  gold_eval.json  gold_evaluate.py  gold_stability.py  gold_v2_enrichment.json  influence_report_2023_0212_COD.json  procedure_aliases.py  rq2_pooled_analysis.py  rq2_restructured.ipynb  rq2_results_extras.py  rq2_robustness.py  run_amendment_pipeline.py  run_influence.py  run_org_dedup_pass4.py  search_procedure.py  (+5 more)
(+227 files in other folders)
