[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "eu-lobby-influence"
version = "0.1.0"
description = "EU lobbying transparency data pipeline for thesis research"
authors = [{name = "Max Pieter"}]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "requests>=2.32.4",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "pydantic>=2.0",
    "supabase>=2.0",
    "dagster",
    "dagster-webserver",
    "tqdm",
    "tenacity",
    "selenium",
    "webdriver-manager",
    "nltk",
    "pypdf",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
